# normie

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  normie-defs.h  normie.c
